2018-08-18  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix the direct message events
	timeline. Each event has properties related to a recipient and a
	source app.
	(twittering-json-object-to-statuses-on-direct-message-events):
	convert recipient information and source app information.

	* twittering-mode.el: Add the database to find user information
	from its screen name.
	(twittering-user-screen-name-db): new variable.
	(twittering-registered-user-screen-names): use the new variable
	`twittering-user-screen-name-db'.
	(twittering-find-user-screen-name): new function.
	(twittering-register-user-id): also update the new variable
	`twittering-user-screen-name-db'.

	* twittering-mode.el: Send a direct message with a new API.
	(twittering-http-post): add a new argument `post-body'.
	(twittering-call-api-with-account): change the arguments for the
	command `send-direct-message', which includes a user ID of the
	recipient instead of a user screen name.
	(twittering-call-api-with-account-in-api1.0): likewise.
	(twittering-call-api-with-account-in-api1.1): invoke the new API
	"POST direct_messages/events/new" for the command
	`send-direct-message'.
	(twittering-edit-post-status): call the command
	`send-direct-message' with new arguments.
	(twittering-update-status-from-minibuffer): likewise.

2018-08-17  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Collect user IDs and corresponding
	names. They are used as candidates when completing a user screen
	name. They are saved in "~/.twittering-mode-user-info.gz" in
	default and they will be automatically loaded when initializing
	global variables.
	(twittering-add-statuses-to-timeline-data): register user IDs
	found in new statuses.
	(twittering-user-id-db): new variable.
	(twittering-user-id-db-file): new customizable variable.
	(twittering-registered-user-screen-names): new function.
	(twittering-find-user): new function.
	(twittering-register-user-id): new function.